--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <!-- Feel free to remove these styles or customise in your own stylesheet -->
     <style>
       .attribution {
         font-size: 11px;
